--- a/src/css/style.css
+++ b/src/css/style.css
@@ -63,9 +63,17 @@ caption {
     background: inherit;
     color: black;
     font-weight: bold;
-    padding: 10px 5px 0;
+    padding: 10px 20px 0;
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
+}
+
+.table__current-day {
+    display: block;
+    font-weight: normal;
+    color: white;
+    width: 100%;
+    text-align: right;
 }
 
 .table__head {
@@ -97,6 +105,13 @@ input {
     padding: 5px 10px;
 }
 
+label {
+    display: block;
+    width: 100%;
+    height: 100%;
+}
+
+.table__data--interval:hover,
 .table__data--last:hover {
     background: wheat;
 }
