--- a/src/css/style.css
+++ b/src/css/style.css
@@ -60,19 +60,21 @@ img {
 }
 
 caption {
+    position: relative;
     background: inherit;
     color: black;
     font-weight: bold;
-    padding: 10px 20px 0;
+    padding: 20px;
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
 }
 
 .table__current-day {
-    display: block;
+    position: absolute;
+    top: 20px;
+    right: 20px;
     font-weight: normal;
-    color: white;
-    width: 100%;
+    color: darkblue;
     text-align: right;
 }
 
