--- a/src/css/style.css
+++ b/src/css/style.css
@@ -6,146 +6,149 @@ https://via.placeholder.com/150x100
 *,
 ::before,
 ::after {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 
 .page {
-    min-height: 100%;
+  min-height: 100%;
 }
 
 .page-body {
-    min-height: 100%;
-    font-size: 20px;
-    font-family: Geometria, Arial, Helvetica, sans-serif;
-    background-color: #2c7580;
-    color: #ccc;
+  min-height: 100%;
+  font-size: 18px;
+  font-family: Geometria, Arial, Helvetica, sans-serif;
+  background-color: #2c7580;
+  color: #ccc;
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 li {
-    list-style-type: none;
+  list-style-type: none;
 }
 
 img {
-    display: block;
-    max-width: 100%;
-    height: auto;
+  display: block;
+  max-width: 100%;
+  height: auto;
 }
 
 /*безопасное скрытие элемента*/
 .visually-hidden {
-    position: absolute !important;
-    width: 1px !important;
-    height: 1px !important;
-    margin: -1px !important;
-    padding: 0 !important;
-    border: 0 !important;
-    clip: rect(0 0 0 0) !important;
-    overflow: hidden !important;
+  position: absolute !important;
+  width: 1px !important;
+  height: 1px !important;
+  margin: -1px !important;
+  padding: 0 !important;
+  border: 0 !important;
+  clip: rect(0 0 0 0) !important;
+  overflow: hidden !important;
 }
 
 .table {
-    position: relative;
-    display: block;
-    width: min-content;
-    margin: 50px auto;
-    background: green;
-    padding: 15px;
-    border-bottom-left-radius: 15px;
-    border-bottom-right-radius: 15px;
-    box-shadow: 5px 5px 25px black;
+  position: relative;
+  display: block;
+  width: min-content;
+  margin: 50px auto;
+  background: green;
+  padding: 15px;
+  border-bottom-left-radius: 15px;
+  border-bottom-right-radius: 15px;
+  box-shadow: 5px 5px 25px black;
 }
 
 caption {
-    position: relative;
-    background: inherit;
-    color: black;
-    font-weight: bold;
-    padding: 20px;
-    border-top-left-radius: 15px;
-    border-top-right-radius: 15px;
+  position: relative;
+  background: inherit;
+  color: black;
+  font-weight: bold;
+  padding: 20px;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
 }
 
 .table__current-day {
-    position: absolute;
-    top: 20px;
-    right: 20px;
-    font-weight: normal;
-    color: darkblue;
-    text-align: right;
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  font-weight: normal;
+  color: darkblue;
+  text-align: right;
 }
 
 .table__head {
-    padding: 5px 10px;
-    height: 50px;
-    background: green;
+  padding: 5px 10px;
+  height: 50px;
+  background: green;
+  vertical-align: top;
+  border: 2px solid darkgray;
+  font-size: 16px;
 }
 
 .table__row {
-    background: gray;
+  background: gray;
 }
 
 .table__row:nth-child(even) {
-    background-color: darkgray;
+  background-color: darkgray;
 }
 
 .table__data {
-    padding: 5px 10px;
-    height: 20px;
-    color: #000444;
-    text-align: center;
+  padding: 5px 10px;
+  height: 20px;
+  color: #000444;
+  text-align: center;
 }
 
 .table__data--interval input {
-    width: 60px;
+  width: 60px;
 }
 
 input {
-    padding: 5px 10px;
+  padding: 5px 10px;
 }
 
 label {
-    display: block;
-    width: 100%;
-    height: 100%;
+  display: block;
+  width: 100%;
+  height: 100%;
 }
 
 .table__data--interval:hover,
 .table__data--last:hover {
-    background: wheat;
+  background: wheat;
 }
 
 .watering-is-today {
-    background: tomato;
-    font-weight: bold;
-    animation-name: isToday;
-    animation-duration: 3s;
-    animation-iteration-count: infinite;
-    animation-fill-mode: forwards;
+  background: tomato;
+  font-weight: bold;
+  animation-name: isToday;
+  animation-duration: 3s;
+  animation-iteration-count: infinite;
+  animation-fill-mode: forwards;
 }
 
 @keyframes isToday {
-    0% {
-        background: tomato;
-    }
-    50% {
-        background: gray;
-    }
-    100% {
-        background: tomato;
-    }
+  0% {
+    background: tomato;
+  }
+  50% {
+    background: gray;
+  }
+  100% {
+    background: tomato;
+  }
 }
 
 input {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 input:disabled {
-    cursor: not-allowed;
-    opacity: 1;
+  cursor: not-allowed;
+  opacity: 1;
 }
